# cloud-security-benchmarks

./: .gitignore  .gitmodules  README.md  main.py  sonar-project.properties  sonar-project.properties.examples
.github/workflows/: ci.yml  codeql.yml  sonarcloud.yml
core/: README.md  pyproject.toml
core/iac-package/: README.md  pyproject.toml
core/iac-package/checkov_runner/: main.py
core/iac-package/semgrep_runner/: main.py
core/iac-package/tfsec_runner/: main.py
iac-package/: pyproject.toml
iac-package/checkov_runner/: main.py
iac-package/semgrep_runner/: main.py
iac-package/tfsec_runner/: main.py
