[tool.poetry]
name = "core"
version = "0.1.0"
description = ""
authors = ["Riccardo Biosas <rbios@protonmail.com>"]
readme = "README.md"
packages = [
    {include = "iac-package"},
    {include = "iam-package"},
]

[tool.poetry.dependencies]
python = "^3.10"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
